--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,9 +16,11 @@
          <th>Email</th>
          <th>Phone</th>
          <th>Address</th>
+         <th>Role</th>
          <th>Status</th>
          <th>Created At</th>
          <th>Updated At</th>
+         <th>Action</th>
      </tr>
      </thead>
      <tbody>
@@ -28,6 +30,7 @@
          <td th:text="${user.email}"></td>
          <td th:text="${user.phone}"></td>
          <td th:text="${user.address}"></td>
+         <td th:text="${user.roleName}"></td>
          <td th:text="${user.status}"></td>
          <td th:text="${user.createdAt}"></td>
          <td th:text="${user.updatedAt}"></td>
