Initialize FlowerShop project with basic structure and configuration files

--- a/src/main/resources/templates/client/component/categoryMenu.html
+++ b/src/main/resources/templates/client/component/categoryMenu.html
@@ -15,7 +15,7 @@
                     <div  th:each="category: ${categories}">
                         <a href="shop-left-sidebar.html" class="category-box wow fadeInUp">
                             <div>
-                                <img src="../assets/svg/1/vegetable.svg" class="blur-up lazyload" alt="">
+                                <img src="../assets/images/Flower/logo.jpg" class="blur-up lazyload" alt="">
                                 <h5 th:text ="${category.categoryName}">Vegetables & Fruit</h5>
                             </div>
                         </a>
