--- a/src/main/resources/templates/client/component/productMenu.html
+++ b/src/main/resources/templates/client/component/productMenu.html
@@ -17,7 +17,7 @@
                             <div class="product-box wow fadeIn">
                                 <div class="product-image">
                                     <a href="product-left-thumbnail.html">
-                                        <img src="../assets/images/veg-2/product/1.png"
+                                        <img th:src="@{${products[i].imageUrl}}"
                                              class="img-fluid blur-up lazyload" alt="">
                                     </a>
                                     <ul class="product-option justify-content-around">
@@ -67,10 +67,10 @@
                                         <span>(34)</span>
                                     </div>
 
-                                    <h6 class="sold weight text-content fw-normal">1 KG</h6>
+
 
                                     <div class="counter-box">
-                                        <h6 class="sold theme-color">$ 80.00</h6>
+                                        <h6 class="sold theme-color" th:text="'$ ' + ${products[i].price}">$ 80.00</h6>
 
                                         <div class="addtocart_btn">
                                             <button class="add-button addcart-button btn buy-button text-light">
@@ -101,7 +101,7 @@
                             <div class="product-box wow fadeIn" data-wow-delay="0.1s">
                                 <div class="product-image">
                                     <a href="product-left-thumbnail.html">
-                                        <img src="../assets/images/veg-2/product/2.png"
+                                        <img th:src="@{${products[i+1].imageUrl}}"
                                              class="img-fluid blur-up lazyload" alt="">
                                     </a>
                                     <ul class="product-option justify-content-around">
@@ -151,10 +151,10 @@
                                         <span>(34)</span>
                                     </div>
 
-                                    <h6 class="sold weight text-content fw-normal">1 KG</h6>
+
 
                                     <div class="counter-box">
-                                        <h6 class="sold theme-color">$ 80.00</h6>
+                                        <h6 class="sold theme-color" th:text="'$ ' + ${products[i + 1].price}">$ 80.00</h6>
 
                                         <div class="addtocart_btn">
                                             <button class="add-button addcart-button btn buy-button text-light">
