Initialize FlowerShop project with basic structure and configuration files

--- a/src/main/resources/templates/client/component/headerClient.html
+++ b/src/main/resources/templates/client/component/headerClient.html
@@ -156,7 +156,7 @@
                                         <ul class="user-box-name">
                                             <li class="product-box-contain">
                                                 <i></i>
-                                                <a href="login.html">Log In</a>
+                                                <a th:href="@{/login}">Log In</a>
                                             </li>
 
                                             <li class="product-box-contain">
