--- a/src/main/resources/templates/client/component/productMenu2.html
+++ b/src/main/resources/templates/client/component/productMenu2.html
@@ -1,7 +1,7 @@
 <section>
-    <div class="container-fluid-lg" th:fragment="productMenu2">
+    <div class="container-fluid-lg" th:fragment="productMenu2(products)">
         <div class="title">
-            <h2>BREAKFAST & DAIRY</h2>
+            <h2>Fresh Flowers</h2>
             <span class="title-leaf">
                     <svg class="icon-width">
                         <use xlink:href="../assets/svg/leaf.svg#leaf"></use>
@@ -17,7 +17,7 @@
                             <div class="product-box wow fadeIn">
                                 <div class="product-image">
                                     <a href="product-left-thumbnail.html">
-                                        <img src="../assets/images/veg-2/product/11.png"
+                                        <img th:src="@{${products[i].imageUrl}}"
                                              class="img-fluid blur-up lazyload" alt="">
                                     </a>
                                     <ul class="product-option justify-content-around">
@@ -70,7 +70,7 @@
                                     <h6 class="sold weight text-content fw-normal">1 KG</h6>
 
                                     <div class="counter-box">
-                                        <h6 class="sold theme-color">$ 80.00</h6>
+                                        <h6 class="sold theme-color" th:text="'$ ' + ${products[i].price}">$ 80.00</h6>
 
                                         <div class="addtocart_btn">
                                             <button class="add-button addcart-button btn buy-button text-light">
@@ -101,7 +101,7 @@
                             <div class="product-box wow fadeIn" data-wow-delay="0.1s">
                                 <div class="product-image">
                                     <a href="product-left-thumbnail.html">
-                                        <img src="../assets/images/veg-2/product/12.png"
+                                        <img th:src="@{${products[i+1].imageUrl}}"
                                              class="img-fluid blur-up lazyload" alt="">
                                     </a>
                                     <ul class="product-option justify-content-around">
@@ -154,7 +154,7 @@
                                     <h6 class="sold weight text-content fw-normal">1 KG</h6>
 
                                     <div class="counter-box">
-                                        <h6 class="sold theme-color" th:text="'$ ' + ${products[i].price}">$ 80.00</h6>
+                                        <h6 class="sold theme-color" th:text="'$ ' + ${products[i +1].price}">$ 80.00</h6>
 
                                         <div class="addtocart_btn">
                                             <button class="add-button addcart-button btn buy-button text-light">
