--- a/src/main/resources/templates/client/component/topSelling.html
+++ b/src/main/resources/templates/client/component/topSelling.html
@@ -1,5 +1,5 @@
 <section class="top-selling-section">
-    <div class="container-fluid-lg" th:fragment="topSelling (topSellingProducts)">
+    <div class="container-fluid-lg" th:fragment="topSelling (topSellingProducts,tredingProduct) ">
         <div class="slider-4-1">
             <div>
                 <div class="row">
@@ -39,7 +39,7 @@
                                         </ul>
                                         <span>(34)</span>
                                     </div>
-                                    <h6>$ 10.00</h6>
+                                    <h6 th:text="${'$ ' + product.price}">$ 10.00</h6>
                                 </div>
                             </div>
 
@@ -60,7 +60,7 @@
                                 <h3>Trending Products</h3>
                             </div>
 
-                            <div class="top-selling-contain wow fadeInUp">
+                            <div class="top-selling-contain wow fadeInUp" th:each="product : ${trendingProducts}">
                                 <a href="product-left-thumbnail.html" class="top-selling-image">
                                     <img src="../assets/images/veg-2/top-selling/5.jpg"
                                          class="img-fluid blur-up lazyload" alt="">
@@ -68,7 +68,7 @@
 
                                 <div class="top-selling-detail">
                                     <a href="product-left-thumbnail.html">
-                                        <h5>Good Life Refined Sunflower Oil</h5>
+                                        <h5 th:text="${product.productName}">Good Life Refined Sunflower Oil</h5>
                                     </a>
                                     <div class="product-rating">
                                         <ul class="rating">
